<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.HomeActivity">
        <RelativeLayout
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include
                    android:id="@+id/layout_appbar"
                    layout="@layout/appar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/meduim_margin"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/meduim_margin"
                    android:layout_marginTop="@dimen/large_margin"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/search_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_font" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/meduim_margin"
                    android:background="@drawable/search_et_style"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etSearch"
                        android:layout_width="@dimen/large_control3"
                        android:layout_height="@dimen/small_control"
                        android:layout_marginLeft="@dimen/meduim_margin"
                        android:layout_marginTop="@dimen/small_margin"
                        android:layout_marginRight="@dimen/meduim_margin"
                        android:background="@android:color/transparent"
                        android:hint="@string/search_et"
                        android:padding="@dimen/small_margin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_font" />

                    <ImageView
                        android:id="@+id/clearText"
                        android:layout_width="@dimen/smallest_control"
                        android:layout_height="@dimen/smallest_control"
                        android:layout_marginTop="@dimen/small_margin2"
                        android:background="@android:color/transparent"
                        android:src="@android:drawable/ic_menu_close_clear_cancel"
                        app:tint="@color/black" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin">

                    <Button
                        android:id="@+id/btSearch"
                        android:layout_width="@dimen/big_control"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/button_style"
                        android:text="@string/search_now"
                        android:textColor="@color/white"
                        android:theme="@style/Theme.ButtonStyle" />
                </RelativeLayout>
                <include layout="@layout/bottom_bar"/>
            </LinearLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>